@@ -1,5 +1,7 @@
-function Player(map_color, unit_color, is_human)
+function Player(map_color, unit_color, type)
 {
+	var is_human = (type == PLAYER_HUMAN);
+	
 	this.default_tactic = {
 		order: TACTIC_ORDER_DEFAULT,
 		pursuit: TACTIC_LOW,
@@ -7,11 +9,11 @@ function Player(map_color, unit_color, is_human)
 		independance: TACTIC_MED
 	};
 	
+	this.type = type;
 	this._money = 0;
 	this._map_color = map_color;
 	this._energy_max = 0;
 	this._energy_current = 0;
-	this._is_human = is_human;
 	
 	this.getUnitColor = function()
 	{
@@ -26,14 +28,14 @@ function Player(map_color, unit_color, is_human)
 	this.addMoney = function(num)
 	{
 		this._money += parseInt(num);
-		if (this._is_human)
+		if (is_human)
 			InterfaceMoneyDraw.setMoney(this._money);
 	};
 	
 	this.decMoney = function(num)
 	{
 		this._money -= parseInt(num);
-		if (this._is_human)
+		if (is_human)
 			InterfaceMoneyDraw.setMoney(this._money);
 	};
 	
@@ -45,7 +47,7 @@ function Player(map_color, unit_color, is_human)
 	this.energyAddMax = function(val)
 	{
 		this._energy_max += val;
-		if (this._is_human)
+		if (is_human)
 		{
 			InterfaceEnergyWaterDraw.energyAddToMax(val);
 			InterfaceMinimap.switchState();
@@ -55,7 +57,7 @@ function Player(map_color, unit_color, is_human)
 	this.energyAddCurrent = function(val)
 	{
 		this._energy_current += val;
-		if (this._is_human)
+		if (is_human)
 		{
 			InterfaceEnergyWaterDraw.energyAddToCurrent(val);
 			InterfaceMinimap.switchState();
@@ -65,5 +67,12 @@ function Player(map_color, unit_color, is_human)
 	this.energyLow = function()
 	{
 		return (this._energy_max==0 || this._energy_max<this._energy_current);
+	};
+	
+	this.isEnemy = function(player)
+	{
+		var player_id = (player instanceof Player) ? player.type : player;
+		
+		return ((player_id != PLAYER_NEUTRAL) && (player_id != this.type));
 	};
 }
