@@ -1,3 +1,10 @@
+Build 43
+- Fly units can't "stand" above buildings structures
+- Show attack cursor when mouse placed on enemy unit
+- Tactical AI: Attack enemy unit when it moved inside seeing range
+- Bugfix: weapon location fix when unit teleported
+- Bugfix: bridge construction fixed
+
 Build 42 (28.06.2013)
 - Bugfix: Fog of war fix during unit teleport
 - Bugfix: Unit couldn't enter invader transport
